Fix horizontal scrollbar appearing on main screen

--- a/src/assets/scss/clusters/_app.scss
+++ b/src/assets/scss/clusters/_app.scss
@@ -1,5 +1,6 @@
 #page-wrapper {
   @extend %hidden-scroll;
+  overflow-x: hidden !important;
 
   .authenticated & {
     @extend .ml-5;
